--- a/explorience-front/public/index.html
+++ b/explorience-front/public/index.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: shemin
+ * @Date: 2024-08-18 20:51:32
+ * @LastEditors: shemin
+ * @LastEditTime: 2024-08-23 14:24:32
+ * @Description: file content
+ * @FilePath: \explorience\explorience-front\public\index.html
+-->
 <!DOCTYPE html>
 <html lang="">
   <head>
@@ -5,7 +13,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Explorience</title>
   </head>
   <body>
     <noscript>
